# ircbots

./: README.md  bot-findings.txt  hopbot.txt
achille-2.1hi-51/: Citations.reps  Makefile  botlist.c  botlist.h  cfgfile.c  channel.c  channel.h  config.h  dcc.c  infile.cfg  locuteur.c  locuteur.h  main.c  misc.c  misc.h  modifs.list  note.c  parse.c  parsing.c  phrase.c  prot.list  rel.list  send.c  server.c  session.c  shit.list  user.list  userlist.c  userlist.h  vlad-ons.h  vladbot.c  vladbot.h
ariela-2.1c/: Makefile  README  cfgfile.h  config.h  ctcp.c  dcc.c  dcc.h  debug.c  file.c  ftp_dcc.c  infile.cfg  (+5 more)
energymech-2.1.2/: EnergyMech.g  EnergyMech.help  EnergyMech.lists  EnergyMech.set  Makefile  botchk  config.h.in  configure  configure.in  mycron
energymech-2.1.2/docs/: EnergyMech.docs  HELPFUL.HINTS  README-OLD
energymech-2.1.2/randfiles/: 8ball.e  news.e  randaway.e  randbeavis.e  randbong.e  randfakelog.e  randflood.e  randinsult.e  randlaser.e  randnicks.e  randpcjoke.e  randpickup.e  randping.e  randsay.e  randsignoff.e  randword.e  randyomama.e
energymech-2.1.2/source/: Makefile.in  cfgfile.c  channel.c  chanuser.c  com-ons.c  combot.c  commands.c  commands.h  config.h  ctcp.c  dcc.c  debug.c  defines.h  fileio.c  flash3.c  flash5.c  fnmatch.c  ftext.c  ftext.h  ftp_dcc.c  function.c  global.h  h.h  log.c  main.c  match.c  memory.c  mflash2.c  monitor.c  parse.c  send.c  server.c  structs.h  tspoof.c  userlist.c  vars.c  xmech.c  xmech2.c  xproto.c
rockbot-6-dev204/: INSTALL  Makefile.in  README.UPGRADE-TO-103  Undernet.servers  configure  configure.in  efnet.servers.txt  logo.txt  test.py
rockbot-6-dev204/CVS/: Entries  Repository
rockbot-6-dev204/Demo/CVS/: Entries  Repository
rockbot-6-dev204/download/: RockBot.displist  RockBot.helpfile  STARTHERE.HOWTO
rockbot-6-dev204/download/CVS/: Entries  Repository  Root
rockbot-6-dev204/source/: .#config.h.1.2  .cvsignore  Makefile.in  botcheck.c  calculator.C  channel.c  channel.h  chanuser.c  chanuser.h  commands.c  commands.h  config.h  conv.c  conv.h  ctcp.c  ctcp.h  dcc.c  dcc.h  ftext.c  ftext.h  function.c  function.h  infobot.c  infobot.h  log.c  log.h  main.c  match.c  match.h  match2.c  misc.c  misc.h  oper.c  oper.h  parse.c  parse.h  rockbot.c  rockbot.h  script.c  script.h  (+7 more)
rockbot-6-dev204/source/CVS/: Entries  Repository
rockbot-6-dev204/tools/: botcheck.c
rockbot-6-dev204/tools/CVS/: Entries  Repository
(+1240 files in other folders)
